# ha-merge-history

./: .gitignore  README.md  ha-merge-history.py  pyproject.toml
tests/: test_merge_history_script.py
